--- a/hoteles.html
+++ b/hoteles.html
@@ -135,7 +135,7 @@
 					</center>
 					<center class="col-4">
 						<div class="card" style="width: 18rem;">
-							<img class="card-img-top" src="images/Gran Meliá Palacio de Isora.jpg" alt="Card image cap">
+							<img class="card-img-top" src="images/Gran Meliá Palacio de Isora.jpg" alt="Card image cap">
 							<div class="card-body">
 								<h5 class="card-title">Gran Meliá Palacio de Isora</h5>
 								<p class="card-text j-text">
